fix navbar spacing

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html {
   width: 100vw;
   height: 4rem;
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.2);
-  gap: 40%;
+  gap: 20%;
 }
 
 .nav-links {
